[project]
name = "compyute"
version = "0.0.1"
authors = [
  { name="Daniel Kofler", email="dkofler@outlook.com" },
]
description = "Machine learning toolbox developed in pure NumPy/CuPy for building, training and analyzing neural networks."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "cupy_cuda12x==13.0.0",
    "ipywidgets==8.1.2",
    "numpy==1.26.4",
    "regex==2023.12.25",
    "tqdm==4.66.2",
]

[project.urls]
Homepage = "https://github.com/dakofler/Compyute"
Issues = "https://github.com/dakofler/Compyute/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"